# eggshot

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/: architecture.md  overview.md  requirements.md  roadmap.md
src/: app.rs  main.rs  state.rs
src/camera/: follow.rs  mod.rs  setup.rs
src/components/: velocity.rs
src/menu/: mod.rs
src/scene/: mod.rs  setup.rs
src/systems/: mod.rs  mouse_look.rs  movement.rs
